feat: add random colors to circles and one more game time option

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         <li>
           <button class="time-btn"
             data-time="10">
-            10 сек
-          </button>
-        </li>
+              10 сек
+          </button></li>
         <li>
           <button class="time-btn"
-          data-time="20">
+            data-time="20">
             20 сек
           </button>
         </li>
@@ -31,6 +30,12 @@
           <button class="time-btn"
           data-time="30">
             30 сек
+          </button>
+        </li>
+        <li>
+          <button class="time-btn"
+          data-time="40">
+            40 сек
           </button>
         </li>
       </ul>
